# rust-lambda-monorepo-test

./: .gitignore  Cargo.toml  README.md  makefile  nx.json  package-lock.json  package.json
apps/apps/rust_lambda/rust_lambda/: Cargo.toml  project.json
apps/node-lambda/: jest.config.ts  project.json
apps/node-lambda/src/: main.ts
apps/rust_lambda/: Cargo.toml  project.json
apps/rust_lambda/src/handlers/: hello_world_handler.rs
