[package]
name = "rust_lambda"
version = "0.1.0"
edition = "2021"


[dependencies]
lambda_runtime = "0.13.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "hello_world_handler"
path = "src/handlers/hello_world_handler.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
